add new fiels